<resources>
    <string name="app_name">DailyQuotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">Nothing happens unless first we dream.</string>
    <string name="quote">Today\'s Quote</string>
    <string name="carl_sandburg">Carl Sandburg</string>
    <string name="home">Home</string>
    <string name="quotes">Quotes</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="favorite_quotes">Favorite Quotes</string>
    <string name="themes">Themes</string>
    <string name="about_me">About me</string>
    <string name="i_m_a_android_developer_i_enjoy_building_apps">I\'m a Android Developer. I enjoy building apps.</string>
    <string name="description">description</string>
    <string name="quotesText">........</string>
    <string name="author">Author</string>
</resources>