<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setbg"
    tools:context=".fragment.SettingsFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="128dp"
        android:layout_height="43dp"
        android:layout_marginTop="84dp"
        android:text="@string/themes"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ImageView
        android:id="@+id/pinkIV"
        android:layout_width="82dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/pink_theme"
        app:layout_constraintEnd_toStartOf="@+id/blueIV"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:contentDescription="@string/description" />

    <ImageView
        android:id="@+id/blueIV"
        android:layout_width="82dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/blue_theme"
        app:layout_constraintEnd_toStartOf="@+id/yellowIV"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:contentDescription="@string/description"/>

    <ImageView
        android:id="@+id/greenIV"
        android:layout_width="82dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/green_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinkIV"
        android:contentDescription="@string/description"/>

    <ImageView
        android:id="@+id/blackIV"
        android:layout_width="82dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/blackleaves"
        app:layout_constraintEnd_toStartOf="@+id/purpleIV"
        app:layout_constraintTop_toBottomOf="@+id/blueIV"
        android:contentDescription="@string/description"/>

    <ImageView
        android:id="@+id/yellowIV"
        android:layout_width="82dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/yellow_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:contentDescription="@string/description"/>

    <ImageView
        android:id="@+id/purpleIV"
        android:layout_width="82dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/purple_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellowIV"
        android:contentDescription="@string/description"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/about_me"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blackIV" />

    <TextView
        android:layout_width="317dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/i_m_a_android_developer_i_enjoy_building_apps"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/linkedIn"
        android:layout_width="54dp"
        android:layout_height="51dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/linkedin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gitHub"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/description"/>

    <ImageView
        android:id="@+id/gitHub"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description"/>

</androidx.constraintlayout.widget.ConstraintLayout>