<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="4dp"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="387dp"
        android:layout_height="727dp"
        android:backgroundTint="@color/black"
        android:foregroundGravity="center"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/quotesFragmentLayout"
            android:layout_width="406dp"
            android:layout_height="721dp"
            android:layout_gravity="center"
            android:background="@drawable/blackleaves">


            <TextView
                android:id="@+id/quotesTV"
                android:layout_width="284dp"
                android:layout_height="300dp"
                android:layout_marginTop="144dp"
                android:gravity="center"
                android:text="@string/quotesText"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Here the quote will be displayed" />

            <TextView
                android:id="@+id/authorTV"
                android:layout_width="360dp"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/author"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.347"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quotesTV"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/quotes_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/circular_background"
                android:padding="10dp"
                android:src="@drawable/ic_content_copy"
                app:layout_constraintEnd_toStartOf="@+id/quotes_fav"
                app:layout_constraintHorizontal_bias="0.753"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorTV"
                android:contentDescription="@string/description"/>

            <ImageView
                android:id="@+id/quotes_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="76dp"
                android:background="@drawable/circular_background"
                android:padding="10dp"
                android:src="@drawable/ic_share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorTV"
                android:contentDescription="@string/description"/>

            <ImageView
                android:id="@+id/quotes_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/circular_background"
                android:padding="10dp"
                android:src="@drawable/ic_favorite_border"
                app:layout_constraintEnd_toStartOf="@+id/quotes_share"
                app:layout_constraintTop_toBottomOf="@+id/authorTV"
                android:contentDescription="@string/description"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>